Connected GUI to the Model